--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie": "^0.4.1",
+    "isomorphic-unfetch": "^3.1.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "next": "10.0.5",
